# cg_learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: camera.cc  camera.h  depth.cc  double_texture.fs  game_base.h  light.cc  mesh.cc  mesh.h  model.cc  model.h  model_main.cc  object.h  render.cc  render.cpp  shader.cc  shader.h  simple.fs  simple_texture.vs  util.cc  util.h
src/shaders/: depth.fs  depth_border.fs  direction_light.fs  light.fs  light.vs  multiple_light.fs  point_light.fs  position.vs  simple_texture.fs  spot_light.fs  uniform.fs
